logs/param/build.make.037.log
Scanning dependencies of target pubvel_spiral
[ 16%] Building CXX object CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o
[ 50%] Built target pubvel_with_max
[ 83%] Built target set_bg_color
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:11:16: error: expected constructor, destructor, or type conversion before ‘(’ token
 ros::param::get(PARAM_NAME, c);
                ^
CMakeFiles/pubvel_spiral.dir/build.make:62: recipe for target 'CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o' failed
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/pubvel_spiral.dir/all' failed
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
